@@ -1,5 +1,8 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0031 :
+* Offset shower handle, corner trash. Localizations update.
+
 A21.2.001.0030 :
 * Trader blocks show the trader. Helper block for random trader.
 
